--- a/tile-element.html
+++ b/tile-element.html
@@ -192,6 +192,13 @@ I'm not quite sure why it's so complciated, it would probably be better to just 
 
 	*/
 	
+	@-webkit-keyframes fadeout{
+	0%     { opacity: 1;  }
+	25%   { opacity: 1;   }
+	50%   { opacity: 0;   }
+	75%   { opacity: 0;   }
+	100%   { opacity: 1;   }
+	}
 	</style>
 	<canvas width='0' height='0' style='width:0px;height:128px;'></canvas> 
 	<canvas width='0' height='0' style='width:0px;height:128px;'></canvas>
@@ -234,6 +241,7 @@ I'm not quite sure why it's so complciated, it would probably be better to just 
 		el.$.over.style.cssText = '';
 		el.$.sticker.style.right = '';
 		el.$.blind.style.cssText = '';
+		forEachInNodeList(el.shadowRoot.getElementsByTagName('canvas'),function(el){el.style.webkitAnimation = '';})
 	}
 	
 	var StyleActive = function(el){
@@ -246,11 +254,13 @@ I'm not quite sure why it's so complciated, it would probably be better to just 
 	var StyleHover = function(el){
 		ResetStyle(el);
 		el.$.sticker.style.right = '26px';
-		el.style.opacity = '0.5';
 	}
 	var StyleProxiamte = function(el){
 		StyleMoving(el);
 		el.style.backgroundColor = '';
+		//TODO: need to deal with animation prefixing
+		el.style.opacity = '1';
+		forEachInNodeList(el.shadowRoot.getElementsByTagName('canvas'),function(el){el.style.webkitAnimation = 'fadeout 1s linear infinite';})
 	}
 	
 	var StyleMoving = function(el){
@@ -272,6 +282,10 @@ I'm not quite sure why it's so complciated, it would probably be better to just 
 	
 	var LogIt = function(el,attr,val){
 		console.log("[g" + el.group_num + "] setting " + attr + "=" + val + " when state_=" + el.state_);
+	}
+	
+	var forEachInNodeList = function(nodelist,foo){
+	Array.prototype.forEach.call(Array.prototype.slice.call(nodelist), foo); //no wonder I've been using jQuery...why on earth does this have to be so lengthy?
 	}
 	
     Polymer('tile-element',{
