bugfix rate logging and add mean

--- a/tile-element.html
+++ b/tile-element.html
@@ -271,7 +271,7 @@ I'm not quite sure why it's so complciated, it would probably be better to just 
 	}
 	
 	var LogIt = function(el,attr,val){
-		console.log("[g" + el.group_num + "] setting " + attr + "=" + val + " when state_=" + el.state_);
+		//console.log("[g" + el.group_num + "] setting " + attr + "=" + val + " when state_=" + el.state_);
 	}
 	
     Polymer('tile-element',{
