--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 </div></core-toolbar>
 
-<div  flex horizontal layout>
+<div id="all_below_toolbar" flex horizontal layout>
 
 	<div class="side_panel" vertical layout>
 
