--- a/index.html
+++ b/index.html
@@ -95,6 +95,10 @@
 		<div class='floating_title'>Directional ratemap [c]</div>
 		<div class='floating_body'>
 			Bin size <span id='dir_binsize_val' class="slider_val">6 degrees</span><br>
+			Smoothing kernel boxcar <span id='dir_binsize_val' class="slider_val">(2x2+1) bins</span><br>
+			<br><br>
+			WARNING: only first LED data is read from pos file.
+			<br><br>
 			WARNING: directional plots are still in alpha testing (unlike everything else which is just about in beta!).
 			<!--<paper-slider class="nodrag" id="rm_binsize_slider" pin snaps min="0.5" max="10" step="0.5" value="2.5" style='width:300px'></paper-slider>
 			<br><br>
