style of keyboard focus notifier

--- a/index.html
+++ b/index.html
@@ -239,7 +239,8 @@
 </div></core-toolbar>
 
 <div id="all_below_toolbar" flex horizontal layout>
-
+	<div class="keyboard_focus_notifier no_focus"></div>
+	
 	<div class="side_panel" vertical layout>
 
 		<div class="side_panel_row side_panel_row" vertical layout>
