--- a/index.html
+++ b/index.html
@@ -121,11 +121,10 @@
 	<div class="floatinginfo palette_info">
 		<div class='floating_title'>Toggle waveform palette [p]</div>
 		<div class='floating_body'>
-			There are three palette modes. Click this button (or press [p]) to cycle through the modes: 
+			There are two palette modes. Click this button (or press [p]) to toggle between the two modes: 
 			<ul>
 			<li>give each group its own color and render all waves with that color (only groups 0-30 have a special color, beyond 30 everything is shown in black)<br></li>
-			<li>render each wave in the group a different color (the palette goes from dark red to yellow), the color is assigned according to the index of the wave within the group, so that if the index is meaninful (i.e. following an autocut) the color will be helpful.</li>
-			<li>render each pixel based on how many waves cross that pixel</li>
+			<li>render each pixel based on how many waves cross that pixel.</li>
 			</ul>
 		</div>						
 	</div>
