--- a/index.html
+++ b/index.html
@@ -112,7 +112,11 @@
 	<div class="floatinginfo speed_info">
 		<div class='floating_title'>Speed ratemap [v]</div>
 		<div class='floating_body'>
-			Bin size <span id='dir_binsize_val' class="slider_val">2 cm/s</span><br>
+			Bin size <span id='dir_binsize_val' class="slider_val">4 cm/s</span><br>
+			Upper limit <span id='dir_binsize_val' class="slider_val">45 cm/s</span><br><br>
+
+			Histogram shows slowest speed at the top, and upper limit speed at the bottom.<br><br>
+
 			WARNING: speed plots are still in alpha testing (unlike everything else which is just about in beta!).
 			<!--<paper-slider class="nodrag" id="rm_binsize_slider" pin snaps min="0.5" max="10" step="0.5" value="2.5" style='width:300px'></paper-slider>
 			<br><br>
