--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
 			Bin size <span id='dir_binsize_val' class="slider_val">6 degrees</span><br>
 			Smoothing kernel boxcar <span id='dir_binsize_val' class="slider_val">(2x2+1) bins</span><br>
 			<br><br>
-			WARNING: only first LED data is read from pos file.
-			<br><br>
-			WARNING: directional plots are still in alpha testing (unlike everything else which is just about in beta!).
+			WARNING: directional plots are still in alpha testing (unlike everything else which is just about in beta!).  Currently, when data for both LEDs is loaded, we use the direction acording to the
+			relative position of the two LEDs, when only one LED is loaded we use the temporal displacement. Both have problems: the 2-spot method requires data for both LEDs at all moments in the trial, and the identity of each LED to be correctly identified.  Filtering and interpolation ("post processing") attempt to deal with most issues in the data, but if the second spot tracking is poor then the directional data will be especially misleading.  Using 1-spot LED is bad when the animal is not moving much because tiny changes in the position of its head will be treated as "displacement" even though these dispalcements are rather less meaningful than the displacements during "proper" running/walking episodes.  If the output of the tracking and post-processing is a short period of no movement, then the dispoalcement is zero and the angle is undefined (treated here as the zero angle).
+
 			<!--<paper-slider class="nodrag" id="rm_binsize_slider" pin snaps min="0.5" max="10" step="0.5" value="2.5" style='width:300px'></paper-slider>
 			<br><br>
 			Smoothing kernel boxcar <span id='rm_smoothing_val' class="slider_val">(2x?+1) by (2x?+1) bins</span><br>
