--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 	<div class="floatinginfo help_info">
 		<div class='floating_title'>Help [?]</div>
 		<div class='floating_body'>
-			Help is available on the <img src="github.png" alt="gigthub logo" height="15px"/> readme - click to open in a new tab. <br><br>
-			You can submit bug reports and feature requests on <img src="github.png" alt="gigthub logo" height="15px"/> (see the button on the right hand side). You can also contribute to the code!
+			Help is available on the <img src="img/github.png" alt="gigthub logo" height="15px"/> readme - click to open in a new tab. <br><br>
+			You can submit bug reports and feature requests on <img src="img/github.png" alt="gigthub logo" height="15px"/> (see the button on the right hand side). You can also contribute to the code!
 		</div>						
 	</div>
 		
@@ -348,7 +348,7 @@ you can drag further files onto the window at any point<br>
 other file types will be ignored<br>
 <div class="github_button github_button_filedrop">Go to <b>quickstart guide</b> on GitHub</div>
 </div>
-<div id="works_with_chrome">v0.5.2 | Tested with Chrome <img src="chromelogo.png" width="15px"/></div>
+<div id="works_with_chrome">v0.5.2 | Tested with Chrome <img src="img/chromelogo.png" width="15px"/></div>
 <div id="filesystem_buttons"> <button id="filesystem_button">turn on FileAPIs</button>
 <button id="filesystem_load_button" style="display: none;">use existing files</button>
 </div>
