weaning off jQuery
still some way to go

--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
 		<core-splitter direction="up"></core-splitter>
 		
 		<div class="side_panel_row side_panel_row" flex vertical layout>
-			<div class="cluster_info above_scrollable_area">
+			<div id="cluster_info" class="cluster_info above_scrollable_area">
 					<div class="cluster_painter">
 						<core-tooltip label="destination group [e]" position="right">
 							<div class='cluster-sticker' id='painter-dest'>?</div> 
