demo video on drop page

--- a/index.html
+++ b/index.html
@@ -346,7 +346,8 @@ the following types of data files are recognised:
 <b><br>set | pos | tet | cut | clu</b><br>
 you can drag further files onto the window at any point<br>
 other file types will be ignored<br>
-<div class="github_button github_button_filedrop">Go to <b>quickstart guide</b> on GitHub</div>
+<div class="github_button github_button_filedrop">Go to <b>quickstart guide</b> on GitHub</div><br><br>
+<a href="https://www.youtube.com/watch?v=36o69CPu-1E" target="_blank"><img id="youtube_demo_img" src="img/demo_youtube.png" width="560" height="315"/></a>
 </div>
 <div id="works_with_chrome">v0.5.2 | Tested with Chrome <img src="img/chromelogo.png" width="15px"/></div>
 </div>
