crosshair mostly working
not tested in tile yet

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
 					</div>
 				</div>
 			<div id="cluster_panel" class="scrollable_area grabbable side_panel_row_flex">
-			<cross-hair id='cluster_crosshair' showBars=0></cross-hair>
+				<cross-hair id='cluster_crosshair' show-bars="0"></cross-hair>
 			</div>
 		</div>
 	
